@@ -64,6 +64,7 @@ struct Compatibility_t
     int world_map_stars_show_policy;
     // 1.3.5.3
     bool require_ground_to_enter_warps;
+    bool fix_npc_activation_event_loop_bug;
     // 1.3.6
 
 
